force-app/main/default/objects/sked__Resource_Region__c/sked__Resource_Region__c.object-meta.xml
<CustomObject>
    <label>Resource Region</label>
    <nameField>
        <label>Resource Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>