force-app/main/default/objects/sked__Resource_Region__c/fields/sked__End__c.field-meta.xml
<CustomField>
    <fullName>sked__End__c</fullName>
    <description>Optional end date for when these regions apply</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>