force-app/main/default/objects/sked__Resource_Region__c/fields/sked__Region__c.field-meta.xml
<CustomField>
    <fullName>sked__Region__c</fullName>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Resource Regions</relationshipLabel>
    <relationshipName>Resource_Regions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>