force-app/main/default/objects/sked__Resource_Region__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <description>Defines secondary regions for resources</description>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Resource Regions</relationshipLabel>
    <relationshipName>Resource_Regions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>