force-app/main/default/objects/sked__Resource_Region__c/fields/sked__Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Start__c</fullName>
    <description>Optional start date for when these regions apply</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>