force-app/main/default/objects/sked__Resource_Region__c/fields/sked_Resource_Biomed_Collection_Op__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Biomed_Collection_Op__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Biomed Collection Op</label>
    <referenceTo>sked_Resource_Biomed_Collection_Op__c</referenceTo>
    <relationshipLabel>Resource Regions</relationshipLabel>
    <relationshipName>sked_Resource_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>